# cel

./: .gitignore  Makefile.in  build.h.in  configure  configure.ac
cel/: Makefile.in  cel.c
celcore/: Makefile.in  annotate.c  eval.c  expr.c  function.c  parse.c  scope.c  tokens.c  type.c  variable.c
celvm/: Makefile.in  compile.c  exec.c
examples/: bench.cel  float.cel  function1.cel  function3.cel  functions2.cel  hello.cel  ptr1.cel  ptr2.cel  test.cel  var.cel
icel/: Makefile.in  icel.c
include/: Makefile.in
include/celcore/: Makefile.in  annotate.h  block.h  cel-config.h.in  eval.h  expr.h  function.h  parse.h  scope.h  tailq.h  tokens.h  type.h  variable.h
include/celvm/: instr.h  vm.h
test/: Makefile.in  celparse.c  celtokenise.c
